# IA_NPA_audirot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  tag_mapping.json
backend/: README.md  __init__.py  config.py  logger.py  main.py
backend/api/: analysis.py  documents.py
backend/database/: __init__.py  db.py
backend/examples/: TEST_REQUESTS.md
backend/models/: schemas.py
backend/services/: __init__.py  analysis_service.py  diff_service.py  llm_service.py  parser_service.py  retrieval_service.py  semantic_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.module.css  App.tsx  globals.css  main.tsx
frontend/src/api/: analysisParse.ts  analysisTypes.ts  index.ts  types.ts  uploadAndCompare.ts
frontend/src/icons/: Icon.module.css  Icon.tsx  index.ts
frontend/src/ui/: AnalysisResultsView.module.css  AnalysisResultsView.tsx  AnalysisRevisionPreview.module.css  Hero.tsx  (+15 more)
hypotesys/: base.json  const.json  const.txt  loader.py  mb25.ipynb  parser.py  preprocessor.py  research.ipynb  research.py
scripts/: compute_article_embeddings.py  compute_tag_embeddings.py  diagnose_search.py  remove_tags.py  research.ipynb  test.py
src/: loader.py  logger.py  parser.py  tagger.py
src/api/: README.md  main.py  models.py
src/collectors/: pravo.py  urls.py
src/parsers/: constitution.py  labor_code.py  merge_laws.py
src/search/: README.md  __init__.py  engine.py  utils.py
src/utils/: logger.py
tests/: test_comparator.py  test_search_quality.py
(+3 files in other folders)
