[tool.poetry]
name = "ia-npa-auditor"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
nltk = {version = "3.8.1", optional = true}
pymorphy3 = "^2.0.6"
ipykernel = "^7.2.0"
bm25s = "^0.3.2"
stemmer = "^0.0.4"
pystemmer = "^3.0.0"
matplotlib = "^3.10.8"
sentence-transformers = "^5.3.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"