[tool.poetry.dependencies]
python = "^3.12"
nltk = {version = "3.8.1", optional = true}
pymorphy3 = "^2.0.6"
ipykernel = "^7.2.0"
bm25s = "^0.3.2"
stemmer = "^0.0.4"
pystemmer = "^3.0.0"
matplotlib = "^3.10.8"
sentence-transformers = "^5.3.0"
gensim = "^4.4.0"
fastapi = "^0.135.1"
uvicorn = "^0.41.0"
pydantic = "^2.12.5"
httpx = "^0.28.1"
python-multipart = "^0.0.20"
pdfplumber = "^0.11.5"
python-docx = "^1.1.2"
psycopg = {version = "^3.2.6", extras = ["binary"]}
rank-bm25 = "^0.2.2"
logger = "^1.4"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
